--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div>
+  <p>{{ displayText }}</p>
   <input [(ngModel)]="input" />
   <button (click)="test()">Submit</button>
 </div>
